hotword with snowboy works

--- a/snowboy/package.json
+++ b/snowboy/package.json
@@ -28,12 +28,13 @@
   "gypfile": true,
   "license": "Apache-2.0",
   "dependencies": {
-    "node-pre-gyp": "^0.6.30"
+    "electron-rebuild": "^1.8.6",
+    "node-pre-gyp": "^0.6.39"
   },
   "devDependencies": {
     "@types/node": "^6.0.38",
     "aws-sdk": "2.x",
-    "nan": "^2.4.0",
+    "nan": "^2.14.0",
     "typescript": "^2.0.2"
   },
   "bugs": {
